--- a/my first site/sedovic.html
+++ b/my first site/sedovic.html
@@ -3,6 +3,47 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <title>My first webpage</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
-<p> lets try this </P>
+
+<body>
+
+    <h1>headline goes here</h1>
+    <p>paragraph is here with more and smaller text</p>
+    <ol>
+      <li>Dog</li>
+      <li>Cat</li>
+      <li>Bird</li>
+        <ul>
+            <li>Bluejay</li>
+            <li>Cardinal</li>
+            <li>Robin</li>
+        </ul>
+      <li>Swallow</li>
+          <ul>
+            <li>Laden</li>
+            <ul>
+              <li>African</li>
+              <li>European</li>
+            </ul>
+            <li>Unladen</li>
+              <ul>
+                <li>African</li>
+                <li>European</li>
+          </ul>
+        </ul>
+    </ol>
+
+<ul>
+    <li><a href="http://google.com" target="_blank">Google</a></li>
+</ul>
+
+<p><a href="page2.html" target="_blank">my second page</a></p>
+
+<img src="cat.jpg" title="My awesome cat" width="300" height="300"/>
+
+<p><a href="mailto:aewr53@mail.missouri.edu">aewr53@mail.missouri.edu<a></p>
+  </body>
+
+  <p>This is my change</p>
