--- a/My first site/sedovic.html
+++ b/My first site/sedovic.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>My first webpage</title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<title>	Welcome to my first site! </title>
+	<meta http-equiv="content-type"
+		content="text/html;charset=utf-8" />
 </head>
 
 <body>
 
-    <h1>headline goes here</h1>
-    <p>paragraph is here with more and smaller text</p>
+    <h1>Hello</h1>
+    <p>my name is Dorothy Sedovic</p>
     <ol>
       <li>Dog</li>
       <li>Cat</li>
@@ -40,10 +42,8 @@
 </ul>
 
 <p><a href="page2.html" target="_blank">my second page</a></p>
-
-<img src="cat.jpg" title="My awesome cat" width="300" height="300"/>
-
-<p><a href="mailto:aewr53@mail.missouri.edu">aewr53@mail.missouri.edu<a></p>
+<img src="IMG_4345.JPG" title="This is me." width="300" height="300"/>
+<p><a href="mailto:drsym5@mail.missouri.edu">drsym5@mail.missouri.edu</a></p>
   </body>
 
   <p>This is my change</p>
