--- a/My first site/sedovic.html
+++ b/My first site/sedovic.html
@@ -1,49 +1,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
+​
 <head>
-	<title>	Welcome to my first site! </title>
-	<meta http-equiv="content-type"
-		content="text/html;charset=utf-8" />
+  <title>This is my first website</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
-
 <body>
-
-    <h1>Hello</h1>
+  <h1>Hello</h1>
     <p>my name is Dorothy Sedovic</p>
+    <img src="IMG_4345.JPG" title="This is me." width="300" height="300"/>
+    <p><a href="mailto:drsym5@mail.missouri.edu">drsym5@mail.missouri.edu</a></p>
+    <p>Here's a joke!</p>
+    <p>What softward do Jedi download?</p>
+    <p>Adobe Wan Kenobi!</p>
+    <p>If you ever need to contact me go here</p>
     <ol>
-      <li>Dog</li>
-      <li>Cat</li>
-      <li>Bird</li>
+      <li>Email</li>
         <ul>
-            <li>Bluejay</li>
-            <li>Cardinal</li>
-            <li>Robin</li>
+          <li><a href="mailto:drsym5@mail.missouri.edu">drysm5@mail.missouri.edu</a></li>
+          <li><a href="mailto:dorothy@surfindave.com">dorothy@surfindave.com</a></li>
         </ul>
-      <li>Swallow</li>
-          <ul>
-            <li>Laden</li>
-            <ul>
-              <li>African</li>
-              <li>European</li>
-            </ul>
-            <li>Unladen</li>
-              <ul>
-                <li>African</li>
-                <li>European</li>
-          </ul>
+      <li>Social Media</li>
+        <ul>
+          <li><a href="https://twitter.com/Dorothy_Sedovic"> Twitter </a></li>
+          <li><a href="https://instagram.com/marvel_dorothy/"> Instagram </a></li>
         </ul>
-    </ol>
-
-<ul>
-    <li><a href="http://google.com" target="_blank">Google</a></li>
+  <p>Tired of this page?</p>
+  <p> Go to another!</p>
+  <ul>
+<li><a href="page2.html" target="_blank">Go to my second page</a></li>
+<li><a href="www.becauseilovesuperheroes.com"> Or visit my blog!</a></li>
 </ul>
-
-<p><a href="page2.html" target="_blank">my second page</a></p>
-<img src="IMG_4345.JPG" title="This is me." width="300" height="300"/>
-<p><a href="mailto:drsym5@mail.missouri.edu">drsym5@mail.missouri.edu</a></p>
   </body>
-
-  <p>This is my change</p>
