--- a/My first site/page2.html
+++ b/My first site/page2.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
 <body>
-  <h1>Welcom to my second page!</h1>
+  <h1>Welcome to my second page!</h1>
     <p>Do you want another joke?</p>
     <p>What do you call a potato that has gone to the Darkside?</p>
     <p>Vader Tot!</p>
