--- a/My first site/sedovic.html
+++ b/My first site/sedovic.html
@@ -9,12 +9,12 @@
 <body>
   <h1>Hello</h1>
     <p>my name is Dorothy Sedovic</p>
-    <img src="IMG_4345.JPG" title="This is me." width="300" height="300"/>
-    <p><a href="mailto:drsym5@mail.missouri.edu">drsym5@mail.missouri.edu</a></p>
+  <a href="mailto:drsym5@mail.missouri.edu">
+  <img src="IMG_4345.JPG" title="This is me." width="300" height="300"</></a>
     <p>Here's a joke!</p>
-    <p>What softward do Jedi download?</p>
+    <p>What software do Jedi download?</p>
     <p>Adobe Wan Kenobi!</p>
-    <p>If you ever need to contact me go here</p>
+    <p>If you ever need to contact me go here:</p>
     <ol>
       <li>Email</li>
         <ul>
@@ -23,13 +23,14 @@
         </ul>
       <li>Social Media</li>
         <ul>
-          <li><a href="https://twitter.com/Dorothy_Sedovic"> Twitter </a></li>
-          <li><a href="https://instagram.com/marvel_dorothy/"> Instagram </a></li>
+          <li><a href="https://twitter.com/Dorothy_Sedovic" target="_blank"> Twitter </a></li>
+          <li><a href="https://instagram.com/marvel_dorothy/" target="_blank"> Instagram </a></li>
         </ul>
-  <p>Tired of this page?</p>
-  <p> Go to another!</p>
-  <ul>
-<li><a href="page2.html" target="_blank">Go to my second page</a></li>
-<li><a href="www.becauseilovesuperheroes.com"> Or visit my blog!</a></li>
-</ul>
-  </body>
+      </ol>
+    <p>Tired of this page?</p>
+    <p> Go to another!</p>
+        <ul>
+          <li><a href="page2.html" target="_blank">Go to my second page</a></li>
+          <li><a href="http://becauseilovesuperheroes.com" target="_blank"> Or visit my blog!</a></li>
+        </ul>
+</body>
