This should make it work
Please work

--- a/My first site/sedovic.html
+++ b/My first site/sedovic.html
@@ -10,7 +10,7 @@
   <h1>Hello</h1>
     <p>my name is Dorothy Sedovic</p>
   <a href="mailto:drsym5@mail.missouri.edu">
-  <img src="IMG_4345.JPG" title="This is me." width="300" height="300"</></a>
+  <img src="IMG_4345.JPG" title="This is me." width="300" height="300"/></a>
     <p>Here's a joke!</p>
     <p>What software do Jedi download?</p>
     <p>Adobe Wan Kenobi!</p>
@@ -34,3 +34,4 @@
           <li><a href="http://becauseilovesuperheroes.com" target="_blank"> Or visit my blog!</a></li>
         </ul>
 </body>
+</html>
