--- a/My first site/sedovic.html
+++ b/My first site/sedovic.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-​
 <head>
   <title>This is my first website</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -10,7 +9,7 @@
   <h1>Hello</h1>
     <p>my name is Dorothy Sedovic</p>
   <a href="mailto:drsym5@mail.missouri.edu">
-  <img src="IMG_4345.JPG" title="This is me." width="300" height="300"/></a>
+  <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" width="300" height="300"</></a>
     <p>Here's a joke!</p>
     <p>What software do Jedi download?</p>
     <p>Adobe Wan Kenobi!</p>
