Please have it numbered
Thank you

--- a/My first site/sedovic.html
+++ b/My first site/sedovic.html
@@ -9,23 +9,25 @@
   <h1>Hello</h1>
     <p>my name is Dorothy Sedovic</p>
   <a href="mailto:drsym5@mail.missouri.edu">
-  <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" width="300" height="300"</></a>
+  <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" width="300" height="300" /></a>
     <p>Here's a joke!</p>
     <p>What software do Jedi download?</p>
     <p>Adobe Wan Kenobi!</p>
     <p>If you ever need to contact me go here:</p>
     <ol>
       <li>Email</li>
+    </ol>
         <ul>
           <li><a href="mailto:drsym5@mail.missouri.edu">drysm5@mail.missouri.edu</a></li>
           <li><a href="mailto:dorothy@surfindave.com">dorothy@surfindave.com</a></li>
         </ul>
+    <ol>
       <li>Social Media</li>
+    </ol>
         <ul>
           <li><a href="https://twitter.com/Dorothy_Sedovic" target="_blank"> Twitter </a></li>
           <li><a href="https://instagram.com/marvel_dorothy/" target="_blank"> Instagram </a></li>
         </ul>
-      </ol>
     <p>Tired of this page?</p>
     <p> Go to another!</p>
         <ul>
