--- a/myfirstsite/sedovic.html
+++ b/myfirstsite/sedovic.html
@@ -4,17 +4,24 @@
 <head>
   <title>This is my first website</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <!--stylesheet!-->
+  <link rel="stylesheet" type="text/css" href="stylesedovic.css"/>
 </head>
 <body>
+<div id="container">
   <h1>Hello</h1>
-    <p>my name is Dorothy Sedovic</p>
+    <p class=p1>my name is Dorothy Sedovic </p>
   <a href="mailto:drsym5@mail.missouri.edu">
-  <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" width="300" height="300" /></a>
+  <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" class="photo" /></a>
+<div id="mainbar">
     <p>Here's a joke!</p>
     <p>What software do Jedi download?</p>
     <p>Adobe Wan Kenobi!</p>
     <p>If you ever need to contact me go here:</p>
     <ol>
+  </div>
+  <!--div main bar closed!-->
+  <div id="sidebar">
       <li>Email</li>
     </ol>
         <ul>
@@ -28,11 +35,18 @@
           <li><a href="https://twitter.com/Dorothy_Sedovic" target="_blank"> Twitter </a></li>
           <li><a href="https://instagram.com/marvel_dorothy/" target="_blank"> Instagram </a></li>
         </ul>
+  </div>
+  <!--div sidebar closed!-->
+  <div id="footbar">
     <p>Tired of this page?</p>
     <p> Go to another!</p>
         <ul>
           <li><a href="page2.html" target="_blank">Go to my second page</a></li>
           <li><a href="http://becauseilovesuperheroes.com" target="_blank"> Or visit my blog!</a></li>
         </ul>
+</div>
+<!--footbar div closed!-->
+</div>
+<!--container div closed!-->
 </body>
 </html>
