--- a/myfirstsite/sedovic.html
+++ b/myfirstsite/sedovic.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="container">
-  <h1>Hello</h1>
+    <h1>Hello</h1>
     <p class=p1>my name is Dorothy Sedovic </p>
   <a href="mailto:drsym5@mail.missouri.edu">
   <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" class="photo" /></a>
@@ -17,11 +17,11 @@
     <p>Here's a joke!</p>
     <p>What software do Jedi download?</p>
     <p>Adobe Wan Kenobi!</p>
+  </div>
+  <!--div "mainbar closed"!-->
+  <div id="sidebar">
     <p>If you ever need to contact me go here:</p>
     <ol>
-  </div>
-  <!--div main bar closed!-->
-  <div id="sidebar">
       <li>Email</li>
     </ol>
         <ul>
@@ -38,8 +38,7 @@
   </div>
   <!--div sidebar closed!-->
   <div id="footbar">
-    <p>Tired of this page?</p>
-    <p> Go to another!</p>
+    <p>Tired of this page? Then go to another!</p>
         <ul>
           <li><a href="page2.html" target="_blank">Go to my second page</a></li>
           <li><a href="http://becauseilovesuperheroes.com" target="_blank"> Or visit my blog!</a></li>
