--- a/myfirstsite/sedovic.html
+++ b/myfirstsite/sedovic.html
@@ -10,7 +10,7 @@
 <body>
 <div id="container">
     <h1>Hello</h1>
-    <p class=p1>my name is Dorothy Sedovic </p>
+    <p class="p1">My name is Dorothy Sedovic </p>
   <a href="mailto:drsym5@mail.missouri.edu">
   <img src="IMG_4345.JPG" title="This is me." alt="Dorothy's photo" class="photo" /></a>
 <div id="mainbar">
